# Gamazons

./: Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.cache  config.h  config.status  configure  configure.in  gamazons.glade  gamazons.glade.bak  thots
autom4te.cache/: output.0  traces.0
pixmaps/: Makefile
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.am-bak  Makefile.in  amazons.h  board.c  board.c-bak  board.h  bstate.c  bstate.h  callbacks.c  callbacks.h  chess-board.c  chess-board.h  eval.c  gamazons.html  interface.c  interface.c.bak  interface.h.bak  main-boarddrawn.c  main.c  makros.h  moves.c  position.h  tags  tags.orig  thots  unit-test.c  unit-test.h
src/.deps/: board.P  bstate.P  callbacks.P  eval.P  interface.P  main.P  moves.P  support.P  unit-test.P
